--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,5 @@
   "singleQuote": true,
   "trailingComma": "none",
   "bracketSameLine": false,
-  "plugins": ["@shopify/prettier-plugin-liquid"]
+  "plugins": ["@shopify/prettier-plugin-liquid", "prettier-plugin-tailwindcss"]
 }
