--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "pull-json": "shopify theme pull -d -o *.json -s mpty-theme.myshopify.com",
     "share": "shopify theme share -s mpty-theme.myshopify.com",
     "format": "prettier --write .",
-    "tw": "npx tailwindcss -i ./index.css -o ./assets/output.css --watch"
+    "tw": "npx tailwindcss -i ./assets/index.css -o ./assets/output.css --watch --minify"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@shopify/prettier-plugin-liquid": "^1.5.2",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.13"
+    "@shopify/prettier-plugin-liquid": "^1.6.3",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.17"
   }
 }
